suppression autres sections inutiles

--- a/span-template/index.html
+++ b/span-template/index.html
@@ -623,39 +623,59 @@
         </div>
       </section>
       <!-- Main Slider Section End-->
-    <div class="section purchase">
-        <div class="container">
-          <!-- Start Video Section Content -->
-          <div class="section-video-content text-center">
-            <!-- Start Text -->
-            <h1 class="fittext wite-text uppercase">
-              Awesome Span Template is Ready for
-              Business, Agency
-              <strong>
-              or
-              </strong>
-              Creative Portfolios
-            </h1>
-            <!-- End Text -->
-            <!-- Start Buttons -->
-            <a href="#" class="btn btn-large btn-effect pn">
-            <i class="fa fa-tasks">
-            </i>
-            Check Out Features
-            </a>
-            <a href="#" class="btn btn-large btn-wite pn">
-            <i class="fa fa-download">
-            </i>
-            Purchase This Now
-            </a>
+      <!-- Start Full Width Section 2 -->
+        <div class="section" style="padding-top:60px; padding-bottom:60px; border-top:1px solid #eee; border-bottom:1px solid #eee; background:#f9f9f9;">
+          <div class="container">
+            <div class="row">
+              <!-- Start Left Side -->
+              <div class="col-md-6">
+                <!-- Start Big Heading -->
+                <div class="big-title">
+                  <h1><strong>More</strong> About Us</h1>
+                  <p class="title-desc">Some Words About Our Company</p>
+                </div>
+                <!-- End Big Heading -->
+                <!-- Some Text -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <!-- Divider -->
+                <div class="hr1" style="margin-bottom:14px;"></div>
+                <!-- Start Icons Lists -->
+                <div class="row">
+                  <div class="col-md-6">
+                    <ul class="icons-list">
+                      <li><i class="fa fa-check-circle"></i> Duis aute irure dolor in reprehenderit.</li>
+                      <li><i class="fa fa-check-circle"></i> Lorem Ipsum is simply dummy text.</li>
+                      <li><i class="fa fa-check-circle"></i> Excepteur sint occaecat cupidatat.</li>
+                      <li><i class="fa fa-check-circle"></i> Sed ut perspiciatis unde omnis.</li>
+                    </ul>
+                  </div>
+                  <div class="col-md-6">
+                    <ul class="icons-list">
+                      <li><i class="fa fa-check-circle"></i> Duis aute irure dolor in reprehenderit.</li>
+                      <li><i class="fa fa-check-circle"></i> Lorem Ipsum is simply dummy text.</li>
+                      <li><i class="fa fa-check-circle"></i> Excepteur sint occaecat cupidatat.</li>
+                      <li><i class="fa fa-check-circle"></i> Sed ut perspiciatis unde omnis.</li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- End Icons Lists -->
+                <!-- Divider -->
+                <div class="hr1" style="margin-bottom:20px;"></div>
+                <!-- Button -->
+                <a href="#" class="btn btn-effect btn-small">Read More About Us</a>
+              </div>
+              <!-- End Left Side -->
+              <!-- Vimeo Iframe -->
+              <div class="col-md-6">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe src="https://player.vimeo.com/video/63322694?title=0&amp;byline=0&amp;portrait=0" width="800" height="450"></iframe>
+                </div>
+              </div>
+            </div>
           </div>
-          <!-- End Section Content -->
         </div>
-        <!-- .container -->
-      </div>
-      <!-- End Purchase Section -->
-      <!-- Start Portfolio Section -->
-      <section id="portfolio">
+        <!-- End Full Width Section 2 -->
+    <section id="portfolio">
         <div class="container">
           <div class="row">
             <!-- Start Heading -->
@@ -807,362 +827,6 @@
         </div>
       </section>
       <!-- End Portfolio Section -->
-      <!-- Start Blog section -->
-      <div id="blog">
-        <div class="container-full">
-          <div class="row">
-            <div class="col-md-4 col-sm-12 col-xl-12 blog-padding">
-              <div class="blog-item">
-                <div class="blog-img">
-                  <img src="assets/img/blog/img1.jpg" alt="">
-                </div>
-                <div class="blog-content">
-                  <a href="#">
-                    <h3>Nobody Cares About Your</h3>
-                  </a>
-                  <p class="body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos minus earum inventore magni aliquam.</p>
-                  <a href="#" class="btn btn-effect btn-small">Read More</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-12 col-xl-12 blog-padding">
-              <div class="blog-item">
-                <div class="blog-img">
-                  <img src="assets/img/blog/img2.jpg" alt="">
-                </div>
-                <div class="blog-content">
-                  <a href="#">
-                    <h3>Broke, Be Homeless, and Ruin Your Life</h3>
-                  </a>
-                  <p class="body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos minus earum inventore magni aliquam.</p>
-                  <a href="#" class="btn btn-effect btn-small">Read More</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-12 col-xl-12 blog-padding">
-              <div class="blog-item">
-                <div class="blog-img">
-                  <div class="blog-img">
-                    <img src="assets/img/blog/img3.jpg" alt="">
-                  </div>
-                </div>
-                <div class="blog-content">
-                  <a href="#">
-                    <h3>3 Powerful Lessons I have Learned</h3>
-                  </a>
-                  <p class="body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos minus earum inventore magni aliquam.</p>
-                  <a href="#" class="btn btn-effect btn-small">Read More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Blog section -->
-      <!-- Start Team Member Section -->
-      <div class="section">
-        <div class="container">
-          <!-- Start Big Heading -->
-          <div class="big-title text-center">    Meet Our Team
-          </div>
-          <!-- End Big Heading -->
-          <!-- Some Text -->
-          <p class="description text-center">
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-            <span class="accent-color sh-tooltip" data-placement="right" title="Simple Tooltip">
-            doloremque laudantium
-            </span>
-            , totam rem aperiam, eaque ipsa quae ab illo inventore
-            <br/>
-            veritatis et quasi
-            <span class="accent-color sh-tooltip" data-placement="bottom" title="Simple Tooltip">
-            architecto
-            </span>
-            beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-          </p>
-          <div class="row">
-            <!-- Start Memebr 1 -->
-            <div class="col-md-3 col-sm-6">
-              <div class="tema-member">
-                <div class="team-thumbnail">
-                  <img src="assets/img/team/team-01.jpg" alt="">
-                  <div class="overlay">
-                    <div class="social-media">
-                      <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                      <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                      <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-                      <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="info">
-                  <h4>David Givens</h4>
-                  <p>Chief technical officer</p>
-                </div>
-              </div>
-            </div>
-            <!-- Start Memebr 2 -->
-            <div class="col-md-3 col-sm-6">
-              <div class="tema-member">
-                <div class="team-thumbnail">
-                  <img src="assets/img/team/team-02.jpg" alt="">
-                  <div class="overlay">
-                    <div class="social-media">
-                      <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                      <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                      <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-                      <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="info">
-                  <h4>Darrell S.Allen</h4>
-                  <p>Software Enginner</p>
-                </div>
-              </div>
-            </div>
-            <!-- Start Memebr 3 -->
-            <div class="col-md-3 col-sm-6">
-              <div class="tema-member">
-                <div class="team-thumbnail">
-                  <img src="assets/img/team/team-03.jpg" alt="">
-                  <div class="overlay">
-                    <div class="social-media">
-                      <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                      <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                      <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-                      <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="info">
-                  <h4>John Doe</h4>
-                  <p>Business manager</p>
-                </div>
-              </div>
-            </div>
-            <!-- Start Memebr 4 -->
-            <div class="col-md-3 col-sm-6">
-              <div class="tema-member">
-                <div class="team-thumbnail">
-                  <img src="assets/img/team/team-04.jpg" alt="">
-                  <div class="overlay">
-                    <div class="social-media">
-                      <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                      <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                      <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-                      <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="info">
-                  <h4>Justyna Michallek</h4>
-                  <p>Creative Director & Ceo</p>
-                </div>
-              </div>
-            </div>
-            <!-- End Memebr 4 -->
-          </div>
-        </div>
-      </div>
-      <!-- Start Team Member Section -->
-      <!-- Start Counter Section -->
-      <div class="parallax" id="parallax-one" style="background-image:url(assets/img/parallax/bg-01.jpg);">
-        <div class="parallax-text-container-1">
-          <div class="parallax-text-item">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-3">
-                  <div class="counter-item">
-                    <div class="hex-icon">
-                      <div class="icon">
-                        <i class="icon-users">
-                        </i>
-                      </div>
-                    </div>
-                    <div class="timer" id="item1" data-to="991" data-speed="5000">
-                    </div>
-                    <h5>
-                      Happy Clients
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
-                  <div class="counter-item">
-                    <div class="hex-icon">
-                      <div class="icon">
-                        <i class="icon-rocket">
-                        </i>
-                      </div>
-                    </div>
-                    <div class="timer" id="item2" data-to="7394" data-speed="5000">
-                    </div>
-                    <h5>
-                      Project Launched
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
-                  <div class="counter-item">
-                    <div class="hex-icon">
-                      <div class="icon">
-                        <i class="icon-eye">
-                        </i>
-                      </div>
-                    </div>
-                    <div class="timer" id="item3" data-to="18745" data-speed="5000">
-                    </div>
-                    <h5>
-                      Days Of hard Work
-                    </h5>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
-                  <div class="counter-item">
-                    <div class="hex-icon">
-                      <div class="icon">
-                        <i class="icon-trophy">
-                        </i>
-                      </div>
-                    </div>
-                    <div class="timer" id="item4" data-to="8423" data-speed="5000">
-                    </div>
-                    <h5>
-                      Coffee Cups A week
-                    </h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Counter Section -->
-      <!-- Start features Section -->
-      <div class=" section features">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <!-- Start Big Heading -->
-              <div class="big-title text-center">
-                We craft digital experiences.
-                <strong>
-                You!
-                </strong>
-              </div>
-              <!-- End Big Heading -->
-              <!-- Text -->
-              <p class="description text-center">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                <br/>
-                veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-              </p>
-            </div>
-            <div class="col-md-6">
-              <div class="features-item">
-                <div class="features">
-                  <div class="icon">
-                    <i class="fa fa-fire icon-radius"></i>
-                  </div>
-                  <div class="features-content">
-                    <h3>Premium Sliders Included</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quisquam id, odit dolore inventore.</p>
-                  </div>
-                </div>
-                <div class="features">
-                  <div class="icon">
-                    <i class="fa fa-flash icon-radius"></i>
-                  </div>
-                  <div class="features-content">
-                    <h3>100% Responsive Layout</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quisquam id, odit dolore inventore.</p>
-                  </div>
-                </div>
-                <div class="features">
-                  <div class="icon">
-                    <i class="fa fa-heart icon-radius"></i>
-                  </div>
-                  <div class="features-content">
-                    <h3>Support System</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quisquam id, odit dolore inventore.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive" src="assets/img/features/features.jpg" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End features Section -->
-      <!-- Start Client Section -->
-      <div class="client">
-        <div class="container">
-          <div class="row">
-            <div class="client-logo">
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img1.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img2.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img3.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img4.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="clear"></div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img5.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img6.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img7.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-6 dashed-line">
-                <div class="client-item">
-                  <a href="#">
-                  <img src="assets/img/clients/img8.png" alt="" />
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Client Section -->
       <!-- Start Footer Section -->
       <footer>
         <div class="container">
