gestion couleur des couleurs sur toutes les pages

--- a/span-template/about.html
+++ b/span-template/about.html
@@ -9,7 +9,7 @@
 <head>
   <!-- Basic -->
   <title>
-    About Us | Span 
+    About Us | Span
   </title>
   <!-- Define Charset -->
   <meta charset="utf-8">
@@ -36,20 +36,7 @@
   <!-- Css3 Transitions Styles  -->
   <link rel="stylesheet" type="text/css" href="assets/css/animate.css" media="screen">
   <!-- Selected Preset -->
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/pink.css" media="screen" />
-  <!-- Color CSS Styles  -->
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/red.css" title="red" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/jade.css" title="jade" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/green.css" title="green" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/blue.css" title="blue" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/beige.css" title="beige" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/cyan.css" title="cyan" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/orange.css" title="orange" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/peach.css" title="peach" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/pink.css" title="pink" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/purple.css" title="purple" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/sky-blue.css" title="sky-blue" media="screen" />
-  <link rel="stylesheet" type="text/css" href="assets/css/colors/yellow.css" title="yellow" media="screen" />
+  <link rel="stylesheet" type="text/css" href="assets/css/colors/bluesante.css" media="screen" />
   <!--[if IE 8]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -57,9 +44,9 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
-<body>
+<body >
   <!-- Full Body Container -->
-  <div id="container">
+  <div id="container" class="boxed-page">
     <!-- Start Header Section -->
     <div class="hidden-header">
     </div>
@@ -566,7 +553,7 @@
       </div>
       <!-- End Header Logo & Naviagtion -->
     </header>
-    <!-- End Header Section --> 
+    <!-- End Header Section -->
     <!-- Start Page Banner -->
     <div class="page-banner">
       <div class="container">
@@ -657,7 +644,7 @@
                   <!-- Toggle Content -->
                   <div id="collapse-1" class="panel-collapse collapse in">
                     <div class="panel-body">
-                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                       <strong>
                       printer
                       </strong>
@@ -683,7 +670,7 @@
                   <!-- Toggle Content -->
                   <div id="collapse-2" class="panel-collapse collapse">
                     <div class="panel-body">
-                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. The point of using Lorem Ipsum is that it has a 
+                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. The point of using Lorem Ipsum is that it has a
                       <strong>
                       more-or-less
                       </strong>
@@ -821,7 +808,7 @@
                     <div class="timer" id="item1" data-to="991" data-speed="5000">
                     </div>
                     <h5>
-                      Happy Clients 
+                      Happy Clients
                     </h5>
                   </div>
                 </div>
@@ -851,7 +838,7 @@
                     <div class="timer" id="item3" data-to="18745" data-speed="5000">
                     </div>
                     <h5>
-                      Days Of hard Work 
+                      Days Of hard Work
                     </h5>
                   </div>
                 </div>
@@ -866,7 +853,7 @@
                     <div class="timer" id="item4" data-to="8423" data-speed="5000">
                     </div>
                     <h5>
-                      Coffee Cups A week 
+                      Coffee Cups A week
                     </h5>
                   </div>
                 </div>
@@ -1045,7 +1032,7 @@
       </div>
       <!-- End Client Section -->
     </div>
-    <!-- End Content -->   
+    <!-- End Content -->
     <!-- Start Footer Section -->
     <footer>
       <div class="container">
@@ -1057,7 +1044,7 @@
                 <img src="assets/img/footer-logo.png" class="img-responsive" alt="Footer Logo" />
               </h4>
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium 
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
               </p>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident blanditiis praesentium</p>
             </div>
@@ -1199,7 +1186,7 @@
           <!-- .col-md-3 -->
           <!-- End Flickr Widget -->
         </div>
-        <!-- .row -->        
+        <!-- .row -->
       </div>
     </footer>
     <!-- End Footer Section -->
@@ -1209,7 +1196,7 @@
         <div class="row">
           <div class="col-sm-6">
             <p>
-              Copyright &copy; 2015 Span - Designed & Developed by 
+              Copyright &copy; 2015 Span - Designed & Developed by
               <a href="http://graygrids.com">
               GrayGrids
               </a>
@@ -1271,6 +1258,11 @@
     12 Predefined Color Skins
     </span>
     <ul class="colors-list">
+      <li>
+        <a onClick="setActiveStyleSheet('bluesante'); return false;" title="Bluesante" class="bluesante">
+        </a>
+      </li>
+
       <li>
         <a onClick="setActiveStyleSheet('blue'); return false;" title="Blue" class="blue">
         </a>
