--- a/span-template/index.html
+++ b/span-template/index.html
@@ -36,20 +36,7 @@
     <!-- Css3 Transitions Styles  -->
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" media="screen">
     <!-- Selected Preset -->
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/pink.css" media="screen" />
-    <!-- Color CSS Styles  -->
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/red.css" title="red" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/jade.css" title="jade" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/green.css" title="green" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/blue.css" title="blue" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/beige.css" title="beige" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/cyan.css" title="cyan" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/orange.css" title="orange" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/peach.css" title="peach" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/pink.css" title="pink" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/purple.css" title="purple" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/sky-blue.css" title="sky-blue" media="screen" />
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/yellow.css" title="yellow" media="screen" />
+    <link rel="stylesheet" type="text/css" href="assets/css/colors/bluesante.css" media="screen" />
     <!--[if IE 8]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -662,7 +649,7 @@
                 <!-- Divider -->
                 <div class="hr1" style="margin-bottom:20px;"></div>
                 <!-- Button -->
-                <a href="#" class="btn btn-effect btn-small">Read More About Us</a>
+                <a href="about.html" class="btn btn-effect btn-small">Read More About Us</a>
               </div>
               <!-- End Left Side -->
               <!-- Vimeo Iframe -->
